--- a/common-web/src/main/resources/application-dev.yml
+++ b/common-web/src/main/resources/application-dev.yml
@@ -2,11 +2,11 @@ server:
   port: 8881
   servlet:
     # 上下文路径
-    context-path: /resNav
+    context-path: /comm
 spring:
   datasource:
     druid:
-      url: jdbc:p6spy:mysql://124.222.118.90:3306/resource_nav?connectTimeout=5000&socketTimeout=10000&autoReconnect=true&failOverReadOnly=false&useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
+      url: jdbc:p6spy:mysql://124.222.118.90:3306/common?connectTimeout=5000&socketTimeout=10000&autoReconnect=true&failOverReadOnly=false&useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
       username: root
       password: Fan223
       driver-class-name: com.p6spy.engine.spy.P6SpyDriver
