--- a/common-web/src/main/resources/application-dev.yml
+++ b/common-web/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ server:
   port: 8881
   servlet:
     # 上下文路径
-    context-path: /comm
+    context-path: /resNav
 spring:
   datasource:
     druid:
